# mcp-store

./: LICENSE  README.md  index.json  mcp-registry.json  skills.json
servers/google-drive/src/: google.py
servers/rag/: build.sh  pyproject.toml  rag.py  requirements.txt
servers/rag/src/: build.sh
servers/terminal/: terminal.config  terminal.json  terminal.md
servers/terminal/src/: build.sh  pyproject.toml  terminal.py
servers/web-search/: README.md  build.sh  pyproject.toml  requirements.txt  web.json  web.md  web.py
servers/web-search/src/: build.sh  pyproject.toml  web.py
