[tool.poetry]
name = "mcp-rag"
version = "1.0.0"
description = "MCP Server for RAG (Retrieval-Augmented Generation) document management"
authors = ["DecypherTek <decyphertek@proton.me>"]
readme = "rag.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
mcp = ">=1.6.0"
qdrant-client = ">=1.0.0"
httpx = ">=0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

