[tool.poetry]
name = "terminal-mcp-server"
version = "0.1.0"
description = "Terminal MCP Server - Secure terminal access for ansible, terraform, packer, and other CLI tools"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "terminal.py"}]

[tool.poetry.dependencies]
python = "3.13.5"
mcp = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
