[tool.poetry]
name = "mcp-web-search"
version = "1.0.0"
description = "MCP Server for web search and content retrieval"
authors = ["DecypherTek <decyphertek@proton.me>"]
readme = "web.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
mcp = ">=1.6.0"
duckduckgo-search = ">=8.1.1"
requests = ">=2.32.3"
beautifulsoup4 = ">=4.12.3"
lxml = ">=5.0.0"
httpx = ">=0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

